feature: forgot password, reset password, cancel reset password and cancle verify email
