# Server/middlewares/auth.middleware.js
@@ -4,14 +4,11 @@ import User from '../models/user.model.js';
 
 const protect = asyncHandler(async (req, res, next) => {
     let token;
-
     if (req.headers.authorization && req.headers.authorization.startsWith('Bearer')) {
         try {
             token = req.headers.authorization.split(' ')[1];
-
             const decoded = jwt.verify(token, process.env.JWT_SECRET);
-
-            req.user = await User.findById(decoded.id).select('-password');
+            req.user = await User.findById(decoded.payload._id).select('-password');
             next();
         } catch (error) {
             console.error(error);
@@ -41,7 +38,7 @@ const auth =
         if (index != -1) {
             next();
         } else {
-            res.status(401);
+            res.status(403);
             throw new Error(`${req.user.role} is not allowed to access this resources`);
         }
     };
