# Server/models/user.model.js
@@ -1,5 +1,10 @@
 import mongoose from 'mongoose';
 import bcrypt from 'bcryptjs';
+import crypto from 'crypto';
+import dotenv from 'dotenv';
+import { stringify } from 'querystring';
+
+dotenv.config();
 
 const userSchema = mongoose.Schema(
     {
@@ -14,7 +19,7 @@ const userSchema = mongoose.Schema(
         },
         phone: {
             type: String,
-            required: true,
+            required: false,
         },
         password: {
             type: String,
@@ -51,6 +56,14 @@ const userSchema = mongoose.Schema(
             required: false,
             default: false,
         },
+        resetPasswordToken: {
+            type: String,
+            required: false,
+        },
+        resetPasswordTokenExpiryTime: {
+            type: Number,
+            required: false,
+        },
     },
     {
         timestamps: true,
@@ -62,13 +75,27 @@ userSchema.methods.matchPassword = async function (enterPassword) {
     return await bcrypt.compare(enterPassword, this.password);
 };
 
+userSchema.methods.getResetPasswordToken = function () {
+    const resetPasswordToken = crypto.randomBytes(32).toString('hex');
+    this.resetPasswordToken = crypto.createHash('sha256').update(resetPasswordToken).digest('hex');
+    this.resetPasswordTokenExpiryTime = Date.now() + process.env.RESET_PASSWORD_EXPIRY_TIME_IN_MINUTE * 60 * 1000;
+    return resetPasswordToken;
+};
+
+userSchema.methods.getEmailVerificationToken = function () {
+    const emailVerificationToken = crypto.randomBytes(32).toString('hex');
+    this.emailVerificationToken = crypto.createHash('sha256').update(emailVerificationToken).digest('hex');
+    return emailVerificationToken;
+};
+
 // Register
 userSchema.pre('save', async function (next) {
     if (!this.isModified('password')) {
-        next();
+        return next();
     }
     const salt = await bcrypt.genSalt(10);
-    this.password = bcrypt.hash(this.password, salt);
+    this.password = await bcrypt.hash(this.password, salt);
+    console.log(this.password);
 });
 
 const User = mongoose.model('User', userSchema);
